# notion2obsidian

./: .gitignore  Makefile  README.md  notion.py  notion2obsidian.py  notion2obsidian_test.py  pyproject.toml
test_data/export aabbccddeeff00112233445566778899/: Example aabbccddeeff00112233445566778899.md  Table aabbccddeeff00112233445566778899.csv
test_data/export aabbccddeeff00112233445566778899/__MACOSX/: ._.keep-me.md
